--- a/public/css/default.css
+++ b/public/css/default.css
@@ -12,3 +12,19 @@
     padding: 15px;
     margin: auto;
 }
+
+.table, h1
+{
+    margin-top: 50px !important;
+}
+
+.addVigilante
+{
+    background-color: #025624 !important;
+    color: white;
+}
+
+.modal-content
+{
+    width: 450px !important;
+}
