--- a/public/css/default.css
+++ b/public/css/default.css
@@ -36,6 +36,19 @@
     font-size: 50px
 }
 
-.dropdown-menu {
-    margin-left: -40px;
+.dropdown-menu .dropdown-item {
+    color: black !important;
+}
+
+.dropdown-menu .dropdown-item:hover {
+    background: #025624;
+    color: white !important;
+}
+
+.navbar-toggler > span {
+    color: white;
+}
+
+.navbar-light .navbar-toggler {
+    border-color: white;
 }
